--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
+    "core-js": "^2.4.1",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "eslint": "3.19.0",
