--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.1",
+    "babel-cli": "^6.24.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react-app": "^3.0.1",
     "babel-runtime": "6.23.0",
+    "body-parser": "^1.17.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
@@ -23,11 +26,14 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "7.1.0",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "mongoose": "^4.11.4",
+    "morgan": "^1.8.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
@@ -37,6 +43,7 @@
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
     "react-fontawesome": "^1.6.1",
+    "rimraf": "^2.6.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
@@ -47,8 +54,11 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "NODE_ENV=development nodemon server/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "clean": "rimraf dist",
+    "lint": "eslint server"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -84,13 +94,23 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
   }
