--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
     "react-fontawesome": "^1.6.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "rimraf": "^2.6.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
