--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
     "rimraf": "^2.6.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
