--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react-app": "^3.0.1",
     "babel-runtime": "6.23.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
