--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.9",
     "react-fontawesome": "^1.6.1",
+    "react-modal-dialog": "^4.0.7",
     "react-particles-js": "^1.5.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
