--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.15.6",
     "rimraf": "^2.6.1",
     "style-loader": "0.18.2",
