Changed npm script and added default img

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
+    "gulp": "^3.9.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "mongoose": "^4.11.4",
@@ -64,7 +65,7 @@
     "start": "node scripts/start.js",
     "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
     "test": "node scripts/test.js --env=jsdom",
-    "server": "NODE_ENV=development nodemon server/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "server": "gulp --gulpfile server/gulpfile.js",
     "clean": "rimraf dist",
     "lint": "eslint server"
   },
