--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,33 +5,35 @@
         "es6": true,
         "node": true
     },
-    "extends": "eslint:recommended",
-    "installedESLint": true,
+    "extends": "react-app",
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
             "jsx": true
         },
+        "ecmaVersion": 2017,
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "import"
     ],
     "rules": {
+        "array-callback-return": 0,
         "indent": [
-            "error",
+            1,
             2
         ],
         "linebreak-style": [
-            "error",
+            1,
             "unix"
         ],
         "quotes": [
-            "error",
+            1,
             "single"
         ],
         "semi": [
-            "error",
+            1,
             "never"
         ]
     }
