--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.15.6",
     "rimraf": "^2.6.1",
+    "socket.io-client": "^2.0.3",
+    "socket.io-react": "^1.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
